Prep for incubator feature for releasing ByteBuffer using MemorySegment